--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 form{
-    height: 100vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,6 +23,8 @@ form>button{
 #pcitation{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 #auteur{
     padding: 10px;
@@ -34,4 +36,7 @@ form>button{
 #pcitation>p{
     padding: 10px;
     font-family: sans-serif;
+}
+input[name="inputauteur"]{
+    margin-top: 20px;
 }
